@@ -43,6 +43,16 @@ type GamePadMap
 	R2 as integer
 end type
 
+' This is used in a C interface, so need to force 32 bit type (enums may be 64 bit).
+' -1 for compatibility with old io_setmousevisibility.
+type CursorVisibility as integer
+enum
+	cursorHidden = 0   'Cursor always hidden
+	cursorVisible = -1 'Cursor always shown, except on touch screens
+	cursorDefault = -2 'Cursor shown when windowed, hidden in fullscreen
+end enum
+
+
 'terminate_signal_handler is a pointer to post_terminate_signal, for dynamically linked graphics backends.
 'windowicon is platform specific: name of the icon resource on Windows, no meaning yet elsewhere
 extern Gfx_init as function (byval terminate_signal_handler as sub cdecl (), byval windowicon as zstring ptr, byval info_buffer as zstring ptr, byval info_buffer_size as integer) as integer
@@ -158,7 +168,7 @@ extern Io_mousebits as sub (byref mx as integer, byref my as integer, byref mwhe
 extern Io_getmouse as sub (byref mx as integer, byref my as integer, byref mwheel as integer, byref mbuttons as integer)
 
 extern Io_setmouse as sub (byval x as integer, byval y as integer)
-extern Io_setmousevisibility as sub (byval visible as integer)
+extern Io_setmousevisibility as sub (byval visibility as CursorVisibility)
 
 'call io_mouserect(-1, -1, -1, -1) to disable clipping
 extern Io_mouserect as sub (byval xmin as integer, byval xmax as integer, byval ymin as integer, byval ymax as integer)
