@@ -92,6 +92,7 @@ DECLARE SUB gfx_sdl_set_zoom(byval value as integer)
 DECLARE SUB gfx_sdl_8bit_update_screen()
 DECLARE SUB update_state()
 DECLARE FUNCTION update_mouse() as integer
+DECLARE SUB update_mouse_visibility()
 DECLARE SUB set_forced_mouse_clipping(byval newvalue as bool)
 DECLARE SUB internal_set_mouserect(byval xmin as integer, byval xmax as integer, byval ymin as integer, byval ymax as integer)
 DECLARE SUB internal_disable_virtual_gamepad()
@@ -122,7 +123,7 @@ DIM SHARED resize_request as XYPair
 DIM SHARED force_video_reset as bool = NO
 DIM SHARED remember_windowtitle as string
 DIM SHARED remember_enable_textinput as bool = NO
-DIM SHARED mouse_visible as integer = 1
+DIM SHARED mouse_visibility as CursorVisibility = cursorDefault
 DIM SHARED debugging_io as bool = NO
 DIM SHARED keystate as Uint8 ptr = NULL
 DIM SHARED joystickhandles(7) as SDL_Joystick ptr
@@ -455,17 +456,10 @@ FUNCTION gfx_sdl_set_screen_mode(byval bitdepth as integer = 0) as integer
 #IFDEF __FB_DARWIN__
   ' SDL on OSX forgets the Unicode input state after a setvideomode
   SDL_EnableUNICODE(IIF(remember_enable_textinput, 1, 0))
-
-  'Force clipping in fullscreen, and undo when leaving
-  set_forced_mouse_clipping (windowedmode = NO AND mouse_visible = NO)
 #ENDIF
 
   SDL_WM_SetCaption(remember_windowtitle, remember_windowtitle)
-  IF windowedmode = NO THEN
-    SDL_ShowCursor(0)
-  ELSE
-    SDL_ShowCursor(mouse_visible)
-  END IF
+  update_mouse_visibility()
   RETURN 1
 END FUNCTION
 
@@ -887,13 +881,13 @@ SUB gfx_sdl_process_events()
         'IF key THEN keybdstate(key) = 3
         IF key THEN keybdstate(key) = 2
         IF debugging_io THEN
-          debuginfo "SDL_KEYDOWN " & evnt.key.keysym.sym & " -> scan=" & key & " char=" & evnt.key.keysym.unicode_
+          debuginfo "SDL_KEYDOWN " & evnt.key.keysym.sym & " -> scan=" & key & " (" & scancodename(key) & ") char=" & evnt.key.keysym.unicode_
         END IF
       CASE SDL_KEYUP
         DIM as integer key = scantrans(evnt.key.keysym.sym)
         IF key THEN keybdstate(key) AND= NOT 1
         IF debugging_io THEN
-          debuginfo "SDL_KEYUP " & evnt.key.keysym.sym & " -> scan=" & key & " char=" & evnt.key.keysym.unicode_
+          debuginfo "SDL_KEYUP " & evnt.key.keysym.sym & " -> scan=" & key & " (" & scancodename(key) & ") char=" & evnt.key.keysym.unicode_
         END IF
       CASE SDL_MOUSEBUTTONDOWN
         'note SDL_GetMouseState is still used, while SDL_GetKeyState isn't
@@ -915,11 +909,7 @@ SUB gfx_sdl_process_events()
               SDL_PumpEvents
             END IF
           ELSE
-            IF windowedmode THEN
-              SDL_ShowCursor(mouse_visible)
-            ELSE
-              SDL_ShowCursor(0)
-            END IF
+            update_mouse_visibility()
             IF mouseclipped THEN
               SDL_GetMouseState(@privatemx, @privatemy)
               lastmx = privatemx
@@ -1138,12 +1128,27 @@ FUNCTION io_sdl_running_on_ouya() as bool
  RETURN NO
 END FUNCTION
 
-SUB io_sdl_setmousevisibility(byval visible as integer)
-  mouse_visible = iif(visible, 1, 0)
-  SDL_ShowCursor(mouse_visible)
+PRIVATE SUB update_mouse_visibility()
+  DIM vis as integer
+  IF mouse_visibility = cursorDefault THEN
+    IF windowedmode THEN vis = 1 ELSE vis = 0
+  ELSEIF mouse_visibility = cursorVisible THEN
+    vis = 1
+  ELSE
+    vis = 0
+  END IF
+  SDL_ShowCursor(vis)
 #IFDEF __FB_DARWIN__
-  set_forced_mouse_clipping (windowedmode = NO AND mouse_visible = NO)
+  'Force clipping in fullscreen, and undo when leaving, because you
+  'can move the cursor to the screen edge, where it will be visible
+  'regardless of whether SDL_ShowCursor is used.
+  set_forced_mouse_clipping (windowedmode = NO AND vis = 0)
 #ENDIF
+END SUB
+
+SUB io_sdl_setmousevisibility(visibility as CursorVisibility)
+  mouse_visibility = visibility
+  update_mouse_visibility()
 END SUB
 
 'Change from SDL to OHR mouse button numbering (swap middle and right)
@@ -1223,8 +1228,9 @@ SUB io_sdl_setmouse(byval x as integer, byval y as integer)
       ' when SDL_WarpMouse is called then the mouse gets moved onto the window,
       ' but SDL forgets to hide the cursor if it was previously requested, and further,
       ' SDL_ShowCursor(0) does nothing because SDL thinks it's already hidden.
+      ' So call SDL_ShowCursor twice in a row as workaround.
       SDL_ShowCursor(1)
-      SDL_ShowCursor(mouse_visible)
+      update_mouse_visibility()
 #ENDIF
     END IF
   END IF
